tests/invalid/undef_mod_qual.err_exp
undef_mod_qual.m:012: In clause for predicate `main'/2:
undef_mod_qual.m:012:   error: undefined predicate `foo.bletchx'/2.
